--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   get_it: ^8.0.3
   injectable_generator: ^2.7.0
   provider: ^6.1.2
+  flutter_image_slideshow: ^0.1.6
+  cached_network_image: ^3.4.1
+  auto_size_text_field: ^2.2.4
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
